 * Fix: Allow button labels to wrap onto two lines in dropdown buttons (Coen van der Kamp)
 * Fix: Allow both horizontal and vertical manual resizing of TextFields (Anisha Singh)
 * Fix: Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
 * Fix: Support text resizing in workflow steps cards (Ivy Jeptoo)
 * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
 * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
 * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
 * Docs: Mention the importance of passing `request` and `current_site` to `get_url` on the performance documentation page (Jake Howard)
 * Docs: Add documentation for `register_user_listing_buttons` hook (LB (Ben Johnston))
 * Docs: Add development (contributing to Wagtail) documentation notes for development on Windows (Akua Dokua Asiedu)
 * Docs: Mention Wagtail’s usage of Django’s default user model by default (Temidayo Azeez)
 * Docs: Add links to treebeard documentation for relevant methods (Temidayo Azeez)
 * Docs: Add clarification on where to register entity plugins (Mark McOsker)
 * Docs: Fix logo in README not being visible in high-contrast mode (Benita Anawonah)
 * Docs: Improve 'first wagtail site' tutorial (Akua Dokua Asiedu)
 * Docs: Grammatical adjustments of `page models` usage guide (Damilola Oladele)
 * Docs: Add class inheritance information to StreamField block sreference (Temidayo Azeez)
 * Docs: Document the hook `register_image_operations` and add an example of a custom Image filter (Coen van der Kamp)
 * Maintenance: Remove unsquashed `testapp` migrations (Matt Westcott)
 * Maintenance: Upgrade to Node 18 for frontend build tooling (LB (Ben) Johnston)
 * Maintenance: Run Python tests with coverage and upload coverage data to codecov (Sage Abdullah)