@@ -45,6 +45,7 @@ depth: 1
  * Allow both horizontal and vertical manual resizing of TextFields (Anisha Singh)
  * Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
  * Support text resizing in workflow steps cards (Ivy Jeptoo)
+ * Ignore images added via fixtures when using `WAGTAILIMAGES_FEATURE_DETECTION_ENABLED` to avoid errors for images that do not exist (Aman Pandey)
 
 ### Documentation
 
